--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!--Asi se comenta en el html-->
     <!--        MENU        -->
     <div id="mysidenav" class="sidenav">
+        <a href="index.html">Inicio</a>
         <!--    Dropdown    -->
         <button class="dropdown-btn">Mi cuenta
             <i class="fa fa-caret-down"></i>
@@ -80,7 +81,7 @@
             recurrentes y comprueba el balance de tus cuentas.
         </p>
     </div>
-    <img height="603" width="1072" src="fotoindex.jpg" style="margin-left: 16%;">
+    <div class="imagen"><img height="603" width="1072" src="fotoindex.jpg"></div>    
 
     <div class="container">
         <div class="contenido-dividers">
@@ -126,9 +127,10 @@
     <!--    PIE DE PAGINA    -->
     <div class="footer">
         <div class="centrarenlaces">
-            <a href="#">Hola</a>
-            <a href="">Adios</a>
-            <a href="#">Cómo estás</a>
+            <a href="#">Política de privacidad</a>
+            <a href="#">Aviso legal</a>
+            <a href="">Cookies</a>
+            <a href="#">Contacto</a>
         </div>
     </div>
     <!--    FIN PIE DE PAGINA    -->
