--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -6,7 +6,7 @@
     <title>WiseWallet</title>
     <link rel="icon" type="image/png" href="logo.png"> <!--    Icono de la pestaña     -->
     <link rel="stylesheet" href="headerfooter.css"> <!--   Enlace con el archivo css     -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="sobrenosotros.css">
     <!-- Icono de la flecha hacia abajo e icono usuario -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -28,15 +28,23 @@
 
     <!--    CONTENIDO PRINCIPAL   -->
     <div class="content">
-        <p>
-            ''Pagina sobre nosotros :)
+        <h1>Sobre nosotros</h1>
+        <h2>¿Quiénes somos?</h2>
+        <p>Nos presentamos. Somos el grupo GR1-3 de la asignatura de Introducción a la 
+            Ingeniería del Software, perteneciente al grado de la Escuela Técnica Superior
+            de Ingeniería Informática de la Universidad de Málaga.
         </p>
     </div>
     <!--    FIN CONTENIDO PRINCIPAL     -->
 
     <!--    PIE DE PAGINA    -->
     <div class="footer">
-
+        <div class="centrarenlaces">
+            <a href="#">Política de privacidad</a>
+            <a href="#">Aviso legal</a>
+            <a href="">Cookies</a>
+            <a href="#">Contacto</a>
+        </div>
     </div>
     <!--    FIN PIE DE PAGINA    -->
 
