--- a/suscripciones.html
+++ b/suscripciones.html
@@ -15,6 +15,7 @@
     <!--Asi se comenta en el html-->
     <!--        MENU        -->
     <div id="mysidenav" class="sidenav">
+        <a href="index.html">Inicio</a>
         <!--    Dropdown    -->
         <button class="dropdown-btn">Mi cuenta
             <i class="fa fa-caret-down"></i>
@@ -54,7 +55,7 @@
     <!--    FIN MENU    -->
 
     <!--    CABECERA    -->
-    <a href="iniciarsesion.html" class="logo">WiseWallet</a>
+    <a href="index.html" class="logo">WiseWallet</a>
     <div class="header">
 
         <div class="iconomenu" onclick="myFunction(this), toggleNav()">
@@ -103,9 +104,10 @@
     <!--    PIE DE PAGINA    -->
     <div class="footer">
         <div class="centrarenlaces">
-            <a href="#">Hola</a>
-            <a href="">Adios</a>
-            <a href="#">Cómo estás</a>
+            <a href="#">Política de privacidad</a>
+            <a href="#">Aviso legal</a>
+            <a href="">Cookies</a>
+            <a href="#">Contacto</a>
         </div>
     </div>
     <!--    FIN PIE DE PAGINA    -->
