--- a/suscripciones.html
+++ b/suscripciones.html
@@ -30,12 +30,8 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="#">Subir</a>
-            <a href="#">Buscar</a>
-            <a href="#">Filtrar</a>
-            <a href="#">Visualizar</a>
+            <a href="#">Mis Gastos</a>
             <a href="#">Grupales</a>
-            <a href="#">Historial</a>
             <a href="#">Exportar</a>
         </div>
         <!--    Enlaces     -->
