--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -39,7 +39,7 @@
         </p>
         <br>
         <div class="container">
-            <img class="imagen-izquierda" src="alberto.jpg" alt="Descripción de la imagen">
+            <img class="imagen-izquierda" src="fran.jpg" alt="Descripción de la imagen">
             <h2>Francisco (Scrum Master/Tester): </h2>
             <br>
             <p>
@@ -56,7 +56,7 @@
         </div>
 
         <div class="container">
-            <img class="imagen-derecha" src="alberto.jpg" alt="Descripción de la imagen">
+            <img class="imagen-derecha" src="manuel.jpg" alt="Descripción de la imagen">
             <h2>Manuel (Diseñador/Desarrollador): </h2>
             <br>
             <p>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="container">
-            <img class="imagen-derecha" src="alberto.jpg" alt="Descripción de la imagen">
+            <img class="imagen-derecha" src="marcos.jpg" alt="Descripción de la imagen">
             <h2>Marcos (Analista/Tester): </h2>
             <br>
             <p>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="container">
-            <img class="imagen-derecha" src="alberto.jpg" alt="Descripción de la imagen">
+            <img class="imagen-derecha" src="victor.jpg" alt="Descripción de la imagen">
             <h2>Víctor (Desarrollador/Product owner): </h2>
             <br>
             <p>
