--- a/WiseWallet(BD)/sobrenosotros.html
+++ b/WiseWallet(BD)/sobrenosotros.html
@@ -6,7 +6,7 @@
     <title>WiseWallet</title>
     <link rel="icon" type="image/png" href="logo.png"> <!--    Icono de la pestaña     -->
     <link rel="stylesheet" href="headerfooter.css"> <!--   Enlace con el archivo css     -->
-    <link rel="stylesheet" href="index2.css">
+    <link rel="stylesheet" href="Sobrenosotros.css">
     <!-- Icono de la flecha hacia abajo e icono usuario -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -28,15 +28,115 @@
 
     <!--    CONTENIDO PRINCIPAL   -->
     <div class="content">
-        <p>
-            ''Pagina sobre nosotros :)
+        <h1>Sobre nosotros</h1>
+        <h2>¿Quiénes somos?</h2>
+        <p>Nos presentamos. Somos el grupo GR1-3 de la asignatura de Introducción a la
+            Ingeniería del Software, perteneciente al grado de la Escuela Técnica Superior
+            de Ingeniería Informática de la Universidad de Málaga.
         </p>
+        <p>
+            Nuestro grupo se compone de 6 integrantes, cuyos puestos se explican a continuación:
+        </p>
+        <br>
+        <div class="container">
+            <img class="imagen-izquierda" src="fran.jpg" alt="Descripción de la imagen">
+            <h2>Francisco (Scrum Master/Tester): </h2>
+            <br>
+            <p>
+                Además de las responsabilidades tradicionales de un Scrum Master, como facilitar los procesos ágiles y
+                eliminar obstáculos, este profesional también aporta una perspectiva crítica desde el punto de vista de
+                la calidad del producto. Utiliza sus habilidades como tester para garantizar que las funcionalidades
+                entregadas cumplan con los estándares de calidad esperados, realizando pruebas exhaustivas y reportando
+                cualquier
+                defecto encontrado. Además, colabora estrechamente con el equipo de desarrollo y las partes interesadas
+                para garantizar una comprensión clara de los requisitos y expectativas de calidad, lo que contribuye a
+                la
+                entrega de un producto final que satisfaga las necesidades del cliente y los usuarios finales.
+            </p>
+        </div>
+
+        <div class="container">
+            <img class="imagen-derecha" src="manuel.jpg" alt="Descripción de la imagen">
+            <h2>Manuel (Diseñador/Desarrollador): </h2>
+            <br>
+            <p>
+                En su rol de diseñador, se enfoca en crear interfaces de usuario intuitivas y atractivas, asegurándose
+                de que el diseño refleje las necesidades y preferencias del usuario. Al mismo tiempo, como
+                desarrollador, utiliza sus habilidades técnicas para implementar las soluciones diseñadas, garantizando
+                que el producto no solo sea visualmente atractivo, sino también funcional y eficiente. Esta combinación
+                de habilidades permite una colaboración fluida entre los equipos de diseño y desarrollo, lo que resulta
+                en una experiencia de usuario cohesiva y de alta calidad.
+            </p>
+        </div>
+
+        <div class="container">
+            <img class="imagen-izquierda" src="soraya.jpg" alt="Descripción de la imagen">
+            <h2>Soraya (Scrum Master/Diseñadora): </h2>
+            <br>
+            <p>
+                Como Scrum Master, facilita las prácticas ágiles del equipo, garantizando la eficacia de las ceremonias
+                de Scrum y eliminando obstáculos. Además, integra su experiencia en diseño para asegurar que las
+                necesidades del usuario sean comprendidas y representadas en las iteraciones del producto. Colabora
+                estrechamente con el equipo de diseño y desarrollo para asegurar que las soluciones propuestas sean
+                viables desde una perspectiva técnica y que cumplan con los estándares de calidad visual y de
+                experiencia de usuario.
+            </p>
+        </div>
+
+        <div class="container">
+            <img class="imagen-derecha" src="marcos.jpg" alt="Descripción de la imagen">
+            <h2>Marcos (Analista/Tester): </h2>
+            <br>
+            <p>
+                Como analista, se encarga de comprender los requisitos del usuario y traducirlos en especificaciones
+                claras y detalladas para el equipo de desarrollo. Además, utiliza su experiencia en pruebas para diseñar
+                casos de prueba exhaustivos que cubran todos los escenarios posibles y aseguren que el producto cumpla
+                con los requisitos funcionales y no funcionales. Durante el proceso de desarrollo, realiza pruebas
+                rigurosas para identificar defectos y garantizar que el producto final cumpla con los estándares de
+                calidad esperados.
+            </p>
+        </div>
+
+        <div class="container">
+            <img class="imagen-izquierda" src="alberto.jpg" alt="Descripción de la imagen">
+            <h2>Alberto (Analista/Product owner): </h2>
+            <br>
+            <p>
+                Como analista, se encarga de comprender a fondo las necesidades del cliente y del usuario final,
+                desglosándolas en requisitos claros y detallados para el equipo de desarrollo. Utiliza su experiencia en
+                análisis de negocios para priorizar estos requisitos en función del valor que aportan al producto y al
+                negocio en general. Además, como Product Owner, actúa como la voz del cliente dentro del equipo, tomando
+                decisiones sobre qué características deben incluirse en cada iteración y cuál es la visión general del
+                producto. Esta combinación de roles le permite al Analista/Product Owner garantizar que el equipo esté
+                enfocado en la entrega de un producto que cumpla con las expectativas del cliente y que agregue valor al
+                negocio.
+            </p>
+        </div>
+
+        <div class="container">
+            <img class="imagen-derecha" src="victor.jpg" alt="Descripción de la imagen">
+            <h2>Víctor (Desarrollador/Product owner): </h2>
+            <br>
+            <p>
+                Como desarrollador, participa activamente en la implementación de las características del producto,
+                utilizando su experiencia técnica para garantizar la calidad y la eficiencia del código. Al mismo
+                tiempo, en su rol de Product Owner, actúa como la voz del cliente dentro del equipo, tomando decisiones
+                sobre qué características deben desarrollarse y en qué orden, basándose en el valor que aportan al
+                usuario final y al negocio.
+            </p>
+        </div>
+
     </div>
     <!--    FIN CONTENIDO PRINCIPAL     -->
-
+    <br><br>
     <!--    PIE DE PAGINA    -->
     <div class="footer">
-
+        <div class="centrarenlaces">
+            <a href="#">Política de privacidad</a>
+            <a href="#">Aviso legal</a>
+            <a href="#">Cookies</a>
+            <a href="#">Contacto</a>
+        </div>
     </div>
     <!--    FIN PIE DE PAGINA    -->
 
